feat: add in-app publication notifications
